Pull request #40: Userpage button fix
Merge in MOBILEDEVPROJECTS/distributor-admin from feature/WDZO-859 to develop

Squashed commit of the following:

commit 31b643ebe6033c2ba81606f265facfb8ba384ebb
Author: Pisarev Pavel <PAPisarev@sberbank.ru>
Date:   Mon Oct 26 16:41:01 2020 +0300

    WDZO-859: fixed button in UsersPage

commit 3ec752ec1d78f70d9851a3edfbc3580bab0bebe8
Author: Pisarev Pavel <PAPisarev@sberbank.ru>
Date:   Thu Oct 22 15:53:45 2020 +0300

    WDZO-859: fixed button in UsersPage

--- a/src/containers/UsersPage/UsersPage.module.css
+++ b/src/containers/UsersPage/UsersPage.module.css
@@ -6,6 +6,10 @@
     position: relative;
 }
 
+.container h3 {
+    margin-top: 20px;
+}
+
 .successBlock {
     background-color: #ffffff;
     border-radius: 16px;
@@ -99,6 +103,22 @@
     padding: 8px 30px;
     display: inline-block;
     bottom: auto;
+}
+
+.packetProcessing__block__button {
+    font-family: Roboto, serif;
+    padding: 8px 15px;
+    border-radius: 16px;
+    line-height: 1.14;
+    color: #fff;
+}
+
+.packetProcessing__block__button_green{
+    background-color: #08a652;
+}
+
+.packetProcessing__block__button_red{
+    background-color: #da7675;
 }
 
 ::-ms-clear, ::-ms-reveal {
